Fixed underlines getting clipped in Firefox. Fixed font rendering thicker in Firefox

--- a/src/components/lists/_list.scss
+++ b/src/components/lists/_list.scss
@@ -39,7 +39,6 @@
   &__link {
     display: inline-block;
     margin-right: 1rem;
-    overflow: hidden;
     vertical-align: top;
     white-space: normal;
   }
